--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-    background-color: hsl(197, 100%, 29%);
+    background-color: green;
 }
