--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-    background-color: green;
+}
+
+.ativo{
+  display: block;
+}
+
+.inativo{
+  display: none;
 }
